--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -12,6 +12,8 @@
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 2rem;
 
     border: 2px solid #2AC0B9; /* project theme accent */
